--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -10,24 +10,12 @@ jobs:
   upload_csv:
     runs-on: ubuntu-latest
     env:
-      AWS_REGION: us-east-1   # 👈 Se define aquí para todos los pasos
+      AWS_REGION: us-east-1
+      INPUT_BUCKET_NAME: archivo-csv-entrada  # 👈 puedes ponerlo directamente aquí
 
     steps:
       - name: Clonar repositorio
         uses: actions/checkout@v3
-
-      - name: Instalar Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
-
-      - name: Inicializar Terraform
-        run: terraform init
-
-      - name: Obtener outputs de Terraform
-        id: get_outputs
-        run: |
-          echo "INPUT_BUCKET_NAME=$(terraform output -raw input_bucket_name)" >> $GITHUB_ENV
 
       - name: Instalar dependencias Python
         run: pip install -r src/requirements.txt
@@ -40,6 +28,4 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Ejecutar script para subir CSVs
-        env:
-          INPUT_BUCKET_NAME: ${{ env.INPUT_BUCKET_NAME }}
         run: python src/upload_csv.py
