--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,13 @@ jobs:
       - name: Clonar repositorio
         uses: actions/checkout@v3
 
+      - name: Configurar AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
       - name: Instalar Terraform
         uses: hashicorp/setup-terraform@v3
         with:
@@ -38,13 +45,6 @@ jobs:
 
       - name: Instalar dependencias Python
         run: pip install -r src/requirements.txt
-
-      - name: Configurar AWS
-        uses: aws-actions/configure-aws-credentials@v3
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
 
       - name: Subir archivos CSV a S3
         env:
