--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           terraform_version: 1.6.6
 
       - name: Instalar dependencias Python en proyecto_lambda/src/
-        run: pip install -r ./proyecto_lambda/src/requirements.txt -t ./proyecto_lambda/src/
+        run: pip install -r ./proyecto_Lambda/src/requirements.txt -t ./proyecto_Lambda/src/
 
       - name: Inicializar Terraform
         run: terraform init
