--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,63 +1,26 @@
-name: Desplegar Infraestructura + Subir CSVs
+name: Subir CSVs a S3 (Trigger Lambda)
 
 on:
   push:
     branches: [main]
-    paths:
-      - 'csv/**'
-      - '**.tf'
-      - '.github/workflows/main.yml'
-      - 'src/**'
-
-env:
-  AWS_REGION: us-east-1
 
 jobs:
-  deploy_and_upload:
+  upload_csv:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Clonar repositorio principal
+      - name: Clonar el repositorio
         uses: actions/checkout@v3
 
-      - name: Clonar módulo Lambda
-        run: git clone https://github.com/jean-franco660/proyecto_lambda.git
-
-      - name: Dar permisos de ejecución a build.sh
-        run: chmod +x proyecto_lambda/build.sh
-
-      - name: Instalar dependencias y generar ZIP de Lambda
-        run: |
-          cd proyecto_lambda
-          pip install -r ./src/requirements.txt -t ./src/
-          ./build.sh
-
       - name: Configurar credenciales AWS
-        uses: aws-actions/configure-aws-credentials@v3
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: us-east-1
 
-      - name: Instalar Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
-
-      - name: Inicializar Terraform (con upgrade)
-        run: terraform init -upgrade
-
-      - name: Planificar infraestructura
-        run: terraform plan -out=tfplan
-
-      - name: Aplicar infraestructura
-        run: terraform apply -auto-approve tfplan
-
-      - name: Obtener nombre del bucket de entrada
-        id: get_outputs
-        run: echo "INPUT_BUCKET_NAME=$(terraform output -raw input_bucket_name)" >> $GITHUB_ENV
-
-      - name: Subir archivos CSV a S3
-        env:
-          INPUT_BUCKET_NAME: ${{ env.INPUT_BUCKET_NAME }}
-        run: python ./src/upload.py
+      - name: Subir todos los CSVs a S3/input/
+        run: |
+          for file in csv/*.csv; do
+            aws s3 cp "$file" "s3://archivo-csv-entrada/input/$(basename $file)"
+          done
